2005-03-12 Magnus Hagdorn
 * fixed minor bug

2005-03-11 Magnus Hagdorn
 * Makefile.ams: tell automake which files to delete on
   make clean and make mostlyclean

2005-03-11 Magnus Hagdorn
 * configure.in: honour GLIMMER microversion, fix bug with 
   checking

2005-03-08 Magnus Hagdorn
 * added basal variables

2005-03-07 Magnus Hagdorn
 * more fixes

2005-03-05 Magnus Hagdorn
 * fixed minor bugs in build system

2005-03-05 Magnus Hagdorn
 * add some missing config files
 * tweak build system

2005-03-04 Magnus Hagdorn
 * forgot make.rules.in

2005-03-04 Magnus Hagdorn
 * forgot configure.in

2005-03-03 Magnus Hagdorn
 * change build-system to autotools

2005-02-28 Magnus Hagdorn
 * renamed io sections to include CF

2004-12-01 Magnus Hagdorn
 * changed ice thickness solver to linear and enforced upper
   kinetic BC
 * EISMINT-2/Makefile: added new plots comparing results with published ones
 * eismint.prof: only from centre to right margin
 * new set of tests for linear/non-linear solver

2004-11-04 Magnus Hagdorn
 * fixed Makefile and added target plots for EISMINT-[12]

2004-11-02 Magnus Hagdorn
 * hooked up eis dir to Makefiles

2004-10-22 Magnus Hagdorn
 * added test configuration for European run using eis_glide
 * added some more tests
	
2004-10-22 Magus Hagdorn
 * started PyCF testing framework

2004-09-21 Magnus Hagdorn
 * e2.l.config: fixed wrong output file

2004-09-17 Magnus Hagdorn
 * uploaded EISMINT 1 and 2 test cases