@@ -1,1 +1,1 @@
-SUBDIRS = EISMINT-1 EISMINT-2 lin-non_lin eis isos PyCF
+SUBDIRS = EISMINT-1 EISMINT-2 lin-non_lin eis isos PyCF benchmarks
