@@ -1,0 +1,12 @@
+if BUILD_GRAPHICS
+  graphics = 
+endif
+BUILT_SOURCES = b1.nc  b2.nc  b3.nc  b4.nc  b5.nc  b6.nc $(graphics)
+
+EXTRA_DIST = b1.config  b2.config  b3.config  b4.config  b5.config  b6.config
+
+MOSTLYCLEANFILES = $(graphics)
+CLEANFILES = $(BUILT_SOURCES)
+
+include $(top_srcdir)/make.rules
+
