@@ -1,0 +1,36 @@
+# GLIMMER Benchmark 1
+# based on EISMINT-2 Exp A run
+# temperature coupling
+
+[EISMINT-2]
+
+[grid]
+# grid sizes
+ewn = 61
+nsn = 61
+upn = 11
+dew = 25000
+dns = 25000
+
+[options]
+temperature = 1
+flow_law = 0
+isostasy = 0
+sliding_law = 4
+marine_margin = 2
+stress_calc = 2
+evolution = 0
+basal_water = 0
+vertical_integration = 1
+
+[time]
+tend = 10000.
+dt = 5.
+ntem = 1.
+nvel = 1.
+niso = 1.
+
+[parameters]
+flow_factor = 1
+geothermal = -42e-3
+
