@@ -1,3 +1,6 @@
+2005-03-14 Magnus Hagdorn
+ * added benchmarks
+
 2005-03-12 Magnus Hagdorn
  * fixed minor bug
 
